add_library(ocdflashnor 
	aduc702x.c
	aducm360.c
	ambiqmicro.c
	at91sam3.c
	at91sam4.c
	at91sam4l.c
	at91sam7.c
	at91samd.c
	ath79.c
	atsamv.c
	avrf.c
	cfi.c
	core.c
	drivers.c
	dsp5680xx_flash.c
	efm32.c
	em357.c
	faux.c
	fm3.c
	fm4.c
	jtagspi.c
	kinetis.c
	kinetis_ke.c
	lpc2000.c
	lpc288x.c
	lpc2900.c
	lpcspifi.c
	mdr.c
	mrvlqspi.c
	niietcm4.c
	non_cfi.c
	nrf5.c
	numicro.c
	ocl.c
	pic32mx.c
	psoc4.c
	sim3x.c
	spi.c
	stellaris.c
	msp432p4.c
	stm32f1x.c
	stm32f2x.c
	stm32h7x.c
	stm32l4x.c
	stm32lx.c
	stmsmi.c
	str7x.c
	str9x.c
	str9xpec.c
	tcl.c
	tms470.c
	virtual.c
	xcf.c
	xmc1xxx.c
	xmc4xxx.c)